added basic page structure to portfolio and contact pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!--Content Container-->
         <div class="content-container">
             <!--Page Title at the top left of every content-container-->
-            <div class="content-title">About</div>
+            <div class="content-title"><h1>About</h1></div>
             <hr>
             <img src="assets/images/headshot.JPEG" alt="Photograph of Ryan" >
             <p>
