added more CSS as per instructions

--- a/index.html
+++ b/index.html
@@ -11,43 +11,47 @@
 <body>
     <!--Header which includes the logo and navigation links-->
     <header>
-        <!--Logo Div-->
-        <div class="logo">
-            <h1>Ryan Udugampola</h1>
-        </div>
+        <div class="header-content">
+            <!--Logo Div-->
+            <div class="logo">
+                <h1>Ryan Udugampola</h1>
+            </div>
 
-        <!--Navigation Links-->
-        <nav>
-            <a href="index.html">About</a> |
-            <a href="portfolio.html">Portfolio</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
+            <!--Navigation Links-->
+            <nav>
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
 
     <!--Main Container-->
-    <div class="main-container">
+    <div class="main-container,clearfix">
         <!--Content Container-->
         <div class="content-container">
             <!--Page Title at the top left of every content-container-->
-            <div class="content-title"><h1>About</h1></div>
-            <hr>
-            <img src="assets/images/headshot.JPEG" alt="Photograph of Ryan" >
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Proin libero nunc consequat interdum varius sit amet mattis vulputate. 
-                Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. 
-                Amet aliquam id diam maecenas ultricies mi eget. Tellus at urna condimentum mattis.
-                 Id venenatis a condimentum vitae sapien. Nibh ipsum consequat nisl vel pretium 
-                 lectus quam id. Egestas congue quisque egestas diam in arcu cursus euismod. 
-                 Lectus mauris ultrices eros in cursus. Ipsum dolor sit amet consectetur adipiscing 
-                 elit ut aliquam. In dictum non consectetur a. Id leo in vitae turpis massa sed 
-                 elementum tempus egestas.
-            </p>
+            <div class="content-title">
+                <h1>About</h1>
+            </div>
+            <div class="content">
+                <img id="profile-picture" src="assets/images/headshot.JPG" alt="Photograph of Ryan" >
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Proin libero nunc consequat interdum varius sit amet mattis vulputate. 
+                    Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. 
+                    Amet aliquam id diam maecenas ultricies mi eget. Tellus at urna condimentum mattis.
+                    Id venenatis a condimentum vitae sapien. Nibh ipsum consequat nisl vel pretium 
+                    lectus quam id. Egestas congue quisque egestas diam in arcu cursus euismod. 
+                    Lectus mauris ultrices eros in cursus. Ipsum dolor sit amet consectetur adipiscing 
+                    elit ut aliquam. In dictum non consectetur a. Id leo in vitae turpis massa sed 
+                    elementum tempus egestas.
+                </p>
+            </div>
         </div>
     </div>
     <footer>
-        <div class="footer-stripe"></div>
         Copyright
     </footer>
 </body>
