--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,19 @@
 <body>
     <!--Header which includes the logo and navigation links-->
     <header>
-        <!--Logo Div-->
-        <div class="logo">
-            <h1>Ryan Udugampola</h1>
+        <div class="header-content">
+            <!--Logo Div-->
+            <div class="logo">
+                <heading>Ryan Udugampola</heading>
+            </div>
+    
+            <!--Navigation Links-->
+            <nav>
+                <a href="index.html">About |</a> 
+                <a href="portfolio.html">Portfolio |</a> 
+                <a href="contact.html">Contact |</a>
+            </nav>
         </div>
-
-        <!--Navigation Links-->
-        <nav>
-            <a href="index.html">About</a> |
-            <a href="portfolio.html">Portfolio</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
     </header>
 
     <!--Main Container-->
@@ -30,12 +32,10 @@
         <div class="content-container">
             <!--Page Title at the top left of every content-container-->
             <div class="content-title"><h1>Portfolio</h1></div>
-            <hr>
         </div>
     </div>
     <footer>
-        <div class="footer-stripe"></div>
-        Copyright
+            Copyright
     </footer>
 </body>
 </html>
