editing css for porfolio page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!--Main Container-->
-    <div class="main-container,clearfix">
+    <div class="main-container">
         <!--Content Container-->
         <div class="content-container">
             <!--Page Title at the top left of every content-container-->
