--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <div class="header-content">
             <!--Logo Div-->
             <div class="logo">
-                <heading>Ryan Udugampola</heading>
+                <h1>Ryan Udugampola</h1>
             </div>
     
             <!--Navigation Links-->
@@ -28,12 +28,34 @@
 
     <!--Main Container-->
     <div class="main-container">
-        <!--Content Container-->
-        <div class="content-container">
-            <!--Page Title at the top left of every content-container-->
-            <div class="content-title"><h1>Portfolio</h1></div>
+            <!--Content Container-->
+            <div class="content-container">
+                <!--Page Title at the top left of every content-container-->
+                <div class="content-title">
+                    <h1>Portfolio</h1>
+                </div>
+                <div class="content">
+                    <div class="project-tile">
+                        <div class="project-name">
+                            <img id="project-thumbnail" src="assets/images/project1.jpg" alt="project1">
+                            <h2>Hangman</h2>
+                        </div>
+                    </div>
+                    <div class="project-tile">
+                            <div class="project-name">
+                                <img id="project-thumbnail" src="assets/images/project2.jpg" alt="project1">
+                                <h2>Hangman</h2>
+                            </div>
+                    </div>
+                    <div class="project-tile">
+                            <div class="project-name">
+                                <img id="project-thumbnail" src="assets/images/project3.png" alt="project1">
+                                <h2>Hangman</h2>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
     <footer>
             Copyright
     </footer>
