completed portfolio css

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,24 +34,18 @@
                 <div class="content-title">
                     <h1>Portfolio</h1>
                 </div>
-                <div class="content">
+                <div class="content clearfix">
                     <div class="project-tile">
-                        <div class="project-name">
-                            <img id="project-thumbnail" src="assets/images/project1.jpg" alt="project1">
-                            <h2>Hangman</h2>
-                        </div>
+                        <img id="project-thumbnail" src="assets/images/project1.jpg" alt="project1">
+                        <div class="project-title">Machine Learning</div>
                     </div>
                     <div class="project-tile">
-                            <div class="project-name">
-                                <img id="project-thumbnail" src="assets/images/project2.jpg" alt="project1">
-                                <h2>Hangman</h2>
-                            </div>
+                        <img id="project-thumbnail" src="assets/images/project2.jpg" alt="project1">
+                        <div class="project-title">The Internet of Things</div>
                     </div>
                     <div class="project-tile">
-                            <div class="project-name">
-                                <img id="project-thumbnail" src="assets/images/project3.png" alt="project1">
-                                <h2>Hangman</h2>
-                            </div>
+                        <img id="project-thumbnail" src="assets/images/project3.png" alt="project1">
+                        <div class="project-title">Cross Platform Applications</div>
                     </div>
                 </div>
             </div>
