completed contact page

--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,29 @@
 
     <!--Main Container-->
     <div class="main-container">
-        <!--Content Container-->
-        <div class="content-container">
-            <!--Page Title at the top left of every content-container-->
-            <div class="content-title"><h1>Contact</h1></div>
+            <!--Content Container-->
+            <div class="content-container">
+                <!--Page Title at the top left of every content-container-->
+                <div class="content-title">
+                    <h1>Contact</h1>
+                </div>
+                <div class="content clearfix">
+                    <div class="input-field">
+                        <h3>Name</h3>
+                        <input type="text" placeholder="John Smith">
+                    </div>
+                    <div class="input-field">
+                        <h3>Email</h3>
+                        <input type="text" placeholder="example@gmail.com">
+                    </div>
+                    <div class="input-field">
+                        <h3>Message</h3>
+                        <textarea rows="10"></textarea>
+                    </div>
+                    <button>Submit</button>
+                </div>
+            </div>
         </div>
-    </div>
     <footer>
         Copyright
     </footer>
