--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Ryan Udugampola - Portfolio</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
     
             <!--Navigation Links-->
             <nav>
-                <a href="index.html">About</a> |
-                <a href="portfolio.html">Portfolio</a> |
+                <a href="index.html">About</a>|
+                <a href="portfolio.html">Portfolio</a>|
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -52,7 +53,7 @@
             </div>
         </div>
     <footer>
-        Copyright
+        Copyright <i class="far fa-copyright"></i>
     </footer>
 </body>
 </html>
