--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Ryan Udugampola - Portfolio</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
 
             <!--Navigation Links-->
             <nav>
-                <a href="index.html">About</a> |
-                <a href="portfolio.html">Portfolio</a> |
+                <a href="index.html">About</a>|
+                <a href="portfolio.html">Portfolio</a>|
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -37,22 +38,26 @@
             <div class="content">
                 <img id="profile-picture" src="assets/images/headshot.JPG" alt="Photograph of Ryan" >
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Proin libero nunc consequat interdum varius sit amet mattis vulputate. 
-                    Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. 
-                    Amet aliquam id diam maecenas ultricies mi eget. Tellus at urna condimentum mattis.
-                    Id venenatis a condimentum vitae sapien. Nibh ipsum consequat nisl vel pretium 
-                    lectus quam id. Egestas congue quisque egestas diam in arcu cursus euismod. 
-                    Lectus mauris ultrices eros in cursus. Ipsum dolor sit amet consectetur adipiscing 
-                    elit ut aliquam. In dictum non consectetur a. Id leo in vitae turpis massa sed 
-                    elementum tempus egestas.
+                    I've often been called a man of many trades. Starting with my education in Mechanical Engineering
+                    from the University of Toronto, I always found a special interest in programming and excelled in everything related.
+                    As obvious as it seems now, at that time I never thought to take a step back and evaluate what I was good at. Instead I continued
+                    along the mechanical engineering path that I had laid out for myself because that was how it was "supposed" to happen.
+                </p>
+                <p>    
+                    Following graduation, I continued to tinker with Arudino programming and robotics as I looked for employment 
+                    in a completely unrelated field (a recurring theme in my road to becoming a developer). Along the way I picked up another degree
+                    in education becoming an Ontario Certified Teacher (OCT), gained specialized loss prevention knowledge while working for an insurance company,
+                    and became a carpenter/entrepreneur building kitchen cabinetry. 
+                </p>
+                <p>
+                    I like to think that the unrelated experience and knowledge I've gained gives me a unique perspective on software development and how it fits into different 
+                    industries from a user's and business owner's perspective...it's the only way I cope with the years I've missed out on programming! 
                 </p>
             </div>
         </div>
     </div>
     <footer>
-        Copyright
+        Copyright <i class="far fa-copyright"></i>
     </footer>
 </body>
 </html>
