--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Ryan Udugampola - Portfolio</title>
 </head>
 <body>
@@ -19,9 +20,9 @@
     
             <!--Navigation Links-->
             <nav>
-                <a href="index.html">About |</a> 
-                <a href="portfolio.html">Portfolio |</a> 
-                <a href="contact.html">Contact |</a>
+                <a href="index.html">About</a>| 
+                <a href="portfolio.html">Portfolio</a>| 
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -51,7 +52,7 @@
         </div>
     </div>
     <footer>
-            Copyright
+            Copyright <i class="far fa-copyright"></i>
     </footer>
 </body>
 </html>
